# web/sheet_v2.go
@@ -10,5 +10,7 @@ func RegisterSheetHandlerV2(r *gin.RouterGroup, sh controller.SheetV2Handler, au
 	c := r.Group("/sheet")
 	{
 		c.GET("/records", authMiddleware, ginx.WrapClaimsAndReq(sh.GetTableRecordReqByUser))
+		c.POST("/sync", authMiddleware, ginx.WrapClaimsAndReq(sh.SyncUnsyncedTableRecords))
+		c.POST("/sync/force", authMiddleware, ginx.WrapClaimsAndReq(sh.ForceSyncUserTableRecords))
 	}
 }
